# fe3d-core

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  example.c  fe-render-api.h  shell.nix  test01  test01.c
.cache/clangd/index/: 01-default_init.c.E8AB7A2D2AB037A1.idx  02-buffers_free.c.597D662408A5107A.idx  03-buffers_generation-handles.c.F8A9E02D72BE236F.idx  dl-loader.c.AAD4BDA29E4C8EAD.idx  dl-loader.h.2AE0199394BAB40B.idx  fe-render-api.c.390C0BE28F73245C.idx  fer-backend_debugblank.c.BE0862D950BD9AEB.idx  rhi.c.3001D2D6EA58B382.idx
backends/: backends.md  fe-render_opengl.c  fer-backend_debugblank.c
dl-loader/: dl-loader.c  dl-loader.h
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen_crawl.html  fe-render-api_8h_source.html  files.html  index.html  navtreedata.js  navtreeindex0.js  structFeBufferDesc-members.html  structFeBufferDesc.html  structFeCmd-members.html  structFeCmd.html  structFeCmdBuffer-members.html  structFeCmdBuffer.html  structFeInitDesc-members.html  structFeInitDesc.html  structFePassDesc-members.html  structFePassDesc.html  structFePipelineDesc-members.html  structFePipelineDesc.html  structFeShaderDesc-members.html  structFeShaderDesc.html
docs/html/search/: classes_0.js
docs/latex/: annotated.tex  fe-render-api_8h_source.tex  files.tex  refman.tex  structFeBufferDesc.tex  structFeCmd.tex  structFeCmdBuffer.tex  structFeInitDesc.tex  structFePassDesc.tex  structFePipelineDesc.tex  structFeShaderDesc.tex
fe-api/: engine.c  engine.h
fe-api/backend-headers/: enginebackend.h
fe-api/render/: fe-render-api.c  fe-render-api.h  rhi.c  rhi.h
src/: dl-loader.h  fe-render-api.c  fe-render-api.h  fe-render.c  fe-render_linux.c
tests/: 01-default_init.c  02-buffers_free.c  03-buffers_generation-handles.c  _triangle.c  test01.c
